# dipcoin-client-python

./: .gitignore  README.md  plan.MD  pyproject.toml  requirements.in
examples/: 1.initialization.py  11.sub_accounts.py  13.orderbook_updates.py  14.web_sockets.py  15.get_funding_history.py  16.add_remove_subaccount.py  17.get_orders.py  18.wallet_smoke_test.py  2.user_info.py  21.solana_user_data.py  22.solana_place_query_cancel_order.py  3.balance.py  4.placing_orders.py  5.cancelling_orders.py  6.adjusting_margin.py  7.onboarding_signer.py  8.exchange_data.py  9.user_data.py  config.py  test_sui_taker_pingpong.py
src/dipcoin_client/: __init__.py  api_service.py  client.py  constants.py  contracts.py  enumerations.py  interfaces.py  onboarding_signer.py  order_signer.py  socket_manager.py  sui_graphql_client.py  util.py  wallets.py  websocket_client.py
src/sui_utils/: account.py  signer.py  utilities.py
