[project]
name = "dipcoin_client_sui"
version = "1.2.0"
description = "Library to interact with dipcoin perp protocol including its off-chain api-gateway and on-chain contracts"
readme = "README.md"
requires-python = ">=3.8,<3.13"
keywords = [ "exchange", "decentralized", "perpetuals", "blockchain"]
dependencies = [
  'requests>=2.31,<3',
  'aiohttp>=3.8.5,<4',
  'bip-utils>=2.7,<3',
  'coincurve>=17,<21',
  'eth-utils>=2.2,<3',
  'PyNaCl>=1.5,<2',
  'websocket-client>=1.6,<2'
]

[project.urls]
Homepage = "https://github.com/zhaoyh1991/dipcoin-client-python"
Repository = "https://github.com/zhaoyh1991/dipcoin-client-python"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]


[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"
